--- a/zabbix_agentd.d/cc.conf
+++ b/zabbix_agentd.d/cc.conf
@@ -1,3 +1,6 @@
 UserParameter=call_numbers.cc2,curl -s http://10.32.1.15:1080/cc/v2/gateways/status/ |awk -F "mg1" '{print $2}'|awk -F "10.32.1.12:5080" '{print $1}' |awk -F "," '{print $2}' |awk -F ":" '{print $2}'
 UserParameter=call_numbers.cc3,curl -s http://10.32.1.15:1080/cc/v2/gateways/status/ |awk -F "mg2" '{print $2}'|awk -F "10.32.1.13:5080" '{print $1}' |awk -F "," '{print $2}' |awk -F ":" '{print $2}'
 UserParameter=call_numbers.cc4,curl -s http://10.32.1.15:1080/cc/v2/gateways/status/ |awk -F "mg3" '{print $2}'|awk -F "10.32.1.14:5080" '{print $1}' |awk -F "," '{print $2}' |awk -F ":" '{print $2}'
+UserParameter=call_numbers.uat_cc2,curl -s http://10.28.33.193:1080/cc/v2/gateways/status/ |awk -F "mg1" '{print $2}'|awk -F "10.28.33.12:5080" '{print $1}' |awk -F "," '{print $2}' |awk -F ":" '{print $2}'
+UserParameter=call_numbers.uat_cc3,curl -s http://10.28.33.193:1080/cc/v2/gateways/status/ |awk -F "mg2" '{print $2}'|awk -F "10.28.33.13:5080" '{print $1}' |awk -F "," '{print $2}' |awk -F ":" '{print $2}'
+UserParameter=call_numbers.uat_cc4 curl -s http://10.28.33.193:1080/cc/v2/gateways/status/ |awk -F "mg3" '{print $2}'|awk -F "10.28.33.14:5080" '{print $1}' |awk -F "," '{print $2}' |awk -F ":" '{print $2}'
